<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tabbed"
            android:icon="@drawable/sms"
            android:title="@string/menu_tabbed" />
        <item
            android:id="@+id/nav_sms"
            android:icon="@drawable/sms"
            android:title="@string/menu_sms" />
        <item
            android:id="@+id/nav_dial"
            android:icon="@drawable/call"
            android:title="@string/menu_dial" />
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/dial"
            android:title="@string/menu_call" />
        <item
            android:id="@+id/nav_shairing"
            android:icon="@drawable/share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map"
            android:title="@string/menu_map" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_mail"
                android:icon="@drawable/email"
                android:title="@string/menu_email" />
            <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_camera" />
            <item
                android:id="@+id/nav_pesa"
                android:icon="@drawable/pesa"
                android:title="@string/menu_pesa" />
        </menu>
    </item>

</menu>
